Fixed dark mode for todo

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --bg: white;
     --cl: black;
     --br: rgba(0,0,0,.3);
+    --td: #f2f3f4;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,6 +15,7 @@
         --bg: black;
         --cl: white;
         --br: rgba(255,255,255,.3);
+        --td: #212F3D;
     }
 }
 
@@ -78,17 +80,6 @@ body{
     box-shadow: 0 0px 20px 0 var(--br);
     display: none;
 }
-/* 
-.add-box::after{
-    position: absolute;
-    content: "";
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(1,1,1,.5);
-    z-index: -1;
-} */
 
 input[type=text]{
     padding: 1.5rem;
@@ -138,7 +129,7 @@ a:visited{
     width: 100%;
     padding: 1rem;
     box-sizing: border-box;
-    background-color: #f2f3f4;
+    background-color: var(--td);
     margin-top: 1rem;
     border-radius: 8px;
     border: 1px solid #c2c2c2;
